# makehuman-assets

./: .gitattributes  README.md
data/: Makefile.am  Makefile.in  base.clothes  base.colors  base.faces  base.materials  base.mesh  base.parts  base.smooth  base.strips  base.subde  base.subdf  base.subdo  base.uv  base.vertices  default.bs  faces.mesh  subd.parts
data/bs_data/characters1/: asian_girl01.bs  big_fat_hero.bs  bodybuilder_man01.bs  bodybuilder_woman01.bs  fashion_model.bs  fat_girl01.bs  hero01.bs  idealistic_man01.bs  megahero.bs  old_man01.bs  ultra_skinny_girl01.bs
data/bs_data/poses1/: catwalk1.bs  dance1.bs  drama1.bs  standing.bs  yoga1.bs
data/hairstyles/: short1_texture.tif
data/hairstyles/long2/: long2_texture.tif
data/rib_data/rib_templates/: out_render.rib.template
data/rib_data/rib_templates_preview/: out_render_preview.rib.template
data/rib_data/rib_templates_toon/: out_render_toon.rib.template
data/rib_data/shaders_data/: alphafur.sl  cameravector.sl  cornea.sl  eyes.sl  onlyrefl.sl  onlytexture.sl  skin1.sl  skin2.sl  skinbump.sl
data/rib_data/textures_data/: body_color.tif  eyebrows_alpha.tif  eyes_reflection.tif  head_color.tif
data/selectors/ages/: female_10.target  female_30.target  female_50.target  female_70.target  female_90.target  male_10.target  male_30.target  male_50.target  male_70.target  male_90.target
data/selectors/breast/: female_10_big_muscle_cone_big.target  female_10_big_muscle_cone_little.target  female_10_big_muscle_sphere_big.target  female_10_big_muscle_sphere_little.target  female_10_big_nomuscle_cone_big.target  female_10_big_nomuscle_cone_little.target  female_10_big_nomuscle_sphere_big.target  female_10_big_nomuscle_sphere_little.target  female_10_skinny_muscle_cone_big.target  female_10_skinny_muscle_cone_little.target  female_10_skinny_muscle_sphere_big.target  female_10_skinny_muscle_sphere_little.target  female_10_skinny_nomuscle_cone_big.target  female_10_skinny_nomuscle_cone_little.target  female_10_skinny_nomuscle_sphere_big.target  female_10_skinny_nomuscle_sphere_little.target  female_30_big_muscle_cone_big.target  female_30_big_muscle_cone_little.target  female_30_big_muscle_sphere_big.target  female_30_big_muscle_sphere_little.target  female_30_big_nomuscle_cone_big.target  female_30_big_nomuscle_cone_little.target  female_30_big_nomuscle_sphere_big.target  female_30_big_nomuscle_sphere_little.target  female_30_skinny_muscle_cone_big.target  female_30_skinny_muscle_cone_little.target  female_30_skinny_muscle_sphere_big.target  female_30_skinny_muscle_sphere_little.target  female_30_skinny_nomuscle_cone_big.target  female_30_skinny_nomuscle_cone_little.target  female_30_skinny_nomuscle_sphere_big.target  female_30_skinny_nomuscle_sphere_little.target  female_50_big_muscle_cone_big.target  female_50_big_muscle_cone_little.target  female_50_big_muscle_sphere_big.target  female_50_big_muscle_sphere_little.target  female_50_big_nomuscle_cone_big.target  (+43 more)
data/textures/: female_child.tif  female_child_flaccid.tif  female_child_flaccid_heavy.tif  female_child_flaccid_light.tif  female_child_heavy.tif  female_child_light.tif  female_child_muscle.tif  female_child_muscle_heavy.tif  female_child_muscle_light.tif  female_old.tif  female_old_flaccid.tif  female_old_flaccid_heavy.tif  female_old_flaccid_light.tif  female_old_heavy.tif  female_old_light.tif  female_old_muscle.tif  female_old_muscle_heavy.tif  female_old_muscle_light.tif  female_young.tif  female_young_flaccid.tif  female_young_flaccid_heavy.tif  female_young_flaccid_light.tif  female_young_heavy.tif  female_young_light.tif  female_young_muscle.tif  female_young_muscle_heavy.tif  female_young_muscle_light.tif  male_child.tif  male_child_flaccid.tif  male_child_flaccid_heavy.tif  male_child_flaccid_light.tif  male_child_heavy.tif  male_child_light.tif  male_child_muscle.tif  male_child_muscle_heavy.tif  male_child_muscle_light.tif  male_old.tif  male_old_flaccid.tif  male_old_flaccid_heavy.tif  male_old_flaccid_light.tif  (+23 more)
pixmaps/: Makefile.am  Makefile.in
(+2255 files in other folders)
